src/renderer/styles/styles.scss
@import "fonts";
@import "scrollbar";

html,
body,
#app {
  height: 100%;
  width: 100%;
  margin: 0;
}

body {
  font-family: "Rubik", "Helvetica", "Arial", sans-serif;
  color: white;
}

/* This fixes some strange margin behaviour with material-ui margins */
#app {
  display: inline-block;
}

*,
*::after,
*::before {
  user-select: none;
  -webkit-user-drag: none;
  -webkit-app-region: no-drag;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  -webkit-focus-ring-color: rgba(255, 255, 255, 0);
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Maven Pro", "Helvetica", "Arial", sans-serif;
  font-weight: 400;
}

a {
  text-decoration: none;
  color: inherit;
}

